[DSTEW-POC] - upgarde to Java 25 and import PDA classes